fix alignment of author

--- a/modules/meeting/app/components/meeting_agenda_items/item_component/show_component.sass
+++ b/modules/meeting/app/components/meeting_agenda_items/item_component/show_component.sass
@@ -32,3 +32,7 @@ $meeting-agenda-item--author-width: 300px
 
     &--duration
       justify-self: end
+    
+    &--author
+      justify-self: stretch
+
